<?xml version="1.0" encoding="utf-8"?>
                                                                                                <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UI_theme"
        android:textAppearance="@style/CustomTextViewStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/imperium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:text="@string/The_Imperium"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/Tau_Empire"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imperium"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chaos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:text="@string/Chaos"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tau"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eldars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/Eldars"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/chaos"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imperium, tau, chaos, eldars" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        app:constraint_referenced_ids="imp_image, tau_image, chaos_image, eldar_image"

        app:flow_horizontalGap="5dp"
        app:flow_verticalGap="5dp"
        app:flow_wrapMode="chain2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/imperium" />

    <ImageView
        android:id="@+id/imp_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/imp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imperium" />

    <ImageView
        android:id="@+id/tau_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/tau"
        app:layout_constraintStart_toEndOf="@+id/imp_image"
        app:layout_constraintTop_toBottomOf="@+id/tau" />

    <ImageView
        android:id="@+id/chaos_image"
        android:src="@drawable/chaos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/eldar_image"
        android:src="@drawable/eldar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText"
        android:hint="@string/EditTextHint"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@id/flow"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button1Text"
        android:textSize="32sp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="10dp"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintEnd_toStartOf="@id/btn2"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button2Text"
        android:textSize="32sp"
        android:layout_marginTop="20dp"

        android:layout_marginStart="10dp"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintStart_toEndOf="@id/btn1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>